2017-12-19  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/83444
	* gcc.dg/strlenopt-38.c: New test.

	PR ipa/82801
	PR ipa/83346
	* g++.dg/ipa/pr82801.C: New test.

2017-12-18  Martin Sebor  <msebor@redhat.com>

	PR middle-end/83373
	PR tree-optimization/78450
	* gcc.dg/pr83373.c: New test.
	* gcc.dg/strlenopt-36.c: New test.
	* gcc.dg/strlenopt-37.c: New test.

2017-12-18  Marek Polacek  <polacek@redhat.com>

	PR c++/83116
	* g++.dg/cpp1y/constexpr-83116.C: New test.

2017-12-18  Segher Boessenkool  <segher@kernel.crashing.org>

	PR rtl-optimization/83424
	* gcc.dg/pr83424.c: New testcase.

2017-12-18  David Malcolm  <dmalcolm@redhat.com>

	PR tree-optimization/83336
	* g++.dg/cpp0x/missing-initializer_list-include.C: Update for
	changes to prune.exp's handling of dg-regexp.
	* g++.dg/plugin/diagnostic-test-inlining-1.C: New test case.
	* g++.dg/plugin/plugin.exp (plugin_test_list): Add it, via
	gcc.dg's plugin/diagnostic_plugin_test_inlining.c.
	* gcc.dg/plugin/diagnostic-test-inlining-1.c: New test case.
	* gcc.dg/plugin/diagnostic-test-inlining-2.c: Likewise.
	* gcc.dg/plugin/diagnostic-test-inlining-3.c: Likewise.
	* gcc.dg/plugin/diagnostic-test-inlining-4.c: Likewise.
	* gcc.dg/plugin/diagnostic_plugin_test_inlining.c: New test
	plugin.
	* gcc.dg/plugin/plugin.exp (plugin_test_list): Add them.
	* lib/prune.exp (prune_gcc_output): Move call to handle-dg-regexps
	to before the various text stripping regsup invocations,
	in particular, to before the stripping of "inlined from".

2017-12-18  Jeff Law  <law@redhat.com>

	PR middle-end/83460
	* g++.dg/pr79095-4.C: Remove compromised test.

2017-12-18  Jakub Jelinek  <jakub@redhat.com>

	PR c++/83300
	* g++.dg/ext/vector33.C: New test.

2017-12-18  Marek Polacek  <polacek@redhat.com>

	PR middle-end/83463
	* gcc.dg/pr83463.c: New test.

2017-12-18  Nathan Sidwell  <nathan@acm.org>

	PR c++/59930
	* g++.dg/parse/pr81247-c.C: Adjust.
	* g++.dg/template/pr59930-[123].C: New.
